--- a/src/main/resources/lang/ru.yml
+++ b/src/main/resources/lang/ru.yml
@@ -109,3 +109,19 @@ spawnmob:
   spawned: '%prefix% &a%num% мобов было создано!'
   invalid: '%prefix% &cНедопустимая сущность'
   usage: '%prefix% &cИспользование: /spawnmob <моб> [кол-во]'
+tpa:
+  request: |-
+    %prefix% &6%sender% запросил телепортацию к вам.
+    &7Введите &e/tpa accept &7или &e/tpa deny.
+  accepted: "%prefix% &aЗапрос на телепортацию от %sender% принят."
+  denied:
+    from: "%prefix% &cЗапрос на телепортацию от %player% отклонен."
+    to: "%prefix% &cЗапрос на телепортацию к %player% отклонен."
+  already-requested: "%prefix% &cВы уже запросили телепортацию."
+  usage: "%prefix% &cИспользование: /tpa <accept|deny|имя_игрока>"
+  expired:
+    from: "%prefix% &cЗапрос на телепортацию от %player% истек."
+    to: "%prefix% &cЗапрос на телепортацию к %player% истек."
+  no-pending-request: "%prefix% &cУ вас нет ожидающих запросов на телепортацию."
+  player-not-found: "%prefix% &cУказанный игрок не в сети."
+  self-tpa-request: "%prefix% &cВы не можете отправить запрос самому себе!"
