--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -111,3 +111,19 @@ spawnmob:
   spawned: "prefix% &a%num% mobs have been spawned!"
   invalid: "%prefix% &cInvalid entity"
   usage: "%prefix% &cUsage: /spawnmob <mob> [num]"
+tpa:
+  request: |-
+    %prefix% &6%sender% has requested to teleport to you.
+    &7Type &e/tpa accept &7or &e/tpa deny.
+  accepted: "%prefix% &aTeleport request from %sender% accepted."
+  denied:
+    from: "%prefix% &cTeleport request from %player% denied."
+    to: "%prefix% &cTeleport request to %player% denied."
+  already-requested: "%prefix% &cYou have already requested a teleport."
+  usage: "%prefix% &cUsage: /tpa <accept|deny|player_name>"
+  expired:
+    from: "%prefix% &cTeleport request from %player% has expired."
+    to: "%prefix% &cTeleport request to %player% has expired."
+  no-pending-request: "%prefix% &cYou have no pending teleport requests."
+  player-not-found: "%prefix% &cThe specified player is not online."
+  self-tpa-request: "%prefix% &cYou cannot send a request to yourself!"
