--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -108,7 +108,7 @@ killmobs:
   killed: "%prefix% &aKilled all hostile mobs"
   usage: "%prefix% &cUsage: /killmobs"
 spawnmob:
-  spawned: "prefix% &a%num% mobs have been spawned!"
+  spawned: "%prefix% &a%num% mobs have been spawned!"
   invalid: "%prefix% &cInvalid entity"
   usage: "%prefix% &cUsage: /spawnmob <mob> [num]"
 tpa:
